--- a/TrueShipAccess/TrueShip.csproj
+++ b/TrueShipAccess/TrueShip.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Web Services\web_helper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TSLogger\TSLogger.csproj">
+    <ProjectReference Include="..\TrueShip_Tests\TSLogger\TSLogger.csproj">
       <Project>{d44c1a52-912b-4444-b28e-5e6778e8e135}</Project>
       <Name>TSLogger</Name>
     </ProjectReference>
