--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{229786D0-5720-4EE3-A379-1E55F1254480}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TrueShip</RootNamespace>
-    <AssemblyName>TrueShip</AssemblyName>
+    <RootNamespace>TrueShipAccess</RootNamespace>
+    <AssemblyName>TrueShipAccess</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,17 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Global\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="Misc\TrueShipLogger.cs" />
     <Compile Include="Models\jsonModels.cs" />
-    <Compile Include="Models\ts_client_config.cs" />
+    <Compile Include="Models\TrueShipConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Web Services\service_classes.cs" />
-    <Compile Include="Web Services\web_helper.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TrueShip_Tests\TSLogger\TSLogger.csproj">
-      <Project>{d44c1a52-912b-4444-b28e-5e6778e8e135}</Project>
-      <Name>TSLogger</Name>
-    </ProjectReference>
+    <Compile Include="Web Services\TrueShipLocationSync.cs" />
+    <Compile Include="Web Services\TrueShipOrderHelperClass.cs" />
+    <Compile Include="Web Services\TrueShipOrderSync.cs" />
+    <Compile Include="Web Services\TruesShipBasicServices.cs" />
+    <Compile Include="Web Services\WebHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
