--- a/src/TrueShipAccessTests/TrueShipAccessTests.csproj
+++ b/src/TrueShipAccessTests/TrueShipAccessTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D44C1A52-912B-4444-B28E-5E6778E8E135}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{624757A7-EE43-4CBB-9C0E-2C1271DDD0C4}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TSLogger</RootNamespace>
-    <AssemblyName>TSLogger</AssemblyName>
+    <RootNamespace>TrueShipAccessTests</RootNamespace>
+    <AssemblyName>TrueShipAccessTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,10 +29,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>TrueShipAccessTests.TrueShipTests</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +45,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ts_logger.cs" />
+    <Compile Include="ts_api_tests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TrueShipAccess\TrueShipAccess.csproj">
+      <Project>{229786d0-5720-4ee3-a379-1e55f1254480}</Project>
+      <Name>TrueShip</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TSLogger\TSLogger.csproj">
+      <Project>{d44c1a52-912b-4444-b28e-5e6778e8e135}</Project>
+      <Name>TSLogger</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
