--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -36,10 +36,19 @@
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Netco, Version=1.5.1.0, Culture=neutral, PublicKeyToken=9d732c15ac2ec2c9, processorArchitecture=MSIL">
+      <HintPath>..\packages\Netco.1.5.1\lib\net45\Netco.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NuGet.Core, Version=1.6.30117.9648, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="ServiceStack.Text, Version=4.0.40.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ServiceStack.Text.4.0.40\lib\net40\ServiceStack.Text.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
@@ -52,25 +61,32 @@
     <Compile Include="..\Global\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Misc\ActionPolicies.cs" />
+    <Compile Include="Models\BoxesResource.cs" />
+    <Compile Include="Models\Charge.cs" />
+    <Compile Include="Models\ItemsResource.cs" />
+    <Compile Include="Models\Meta.cs" />
+    <Compile Include="Models\OrdersResponse.cs" />
+    <Compile Include="Models\TrueShipCredentials.cs" />
+    <Compile Include="TrueShipException.cs" />
+    <Compile Include="TrueShipFactory.cs" />
+    <Compile Include="TrueShipService.cs" />
+    <Compile Include="ITrueShipFactory.cs" />
+    <Compile Include="ITrueShipService.cs" />
     <Compile Include="Misc\TrueShipLogger.cs" />
-    <Compile Include="Models\CompaniesResource.cs" />
+    <Compile Include="Models\CompanyResponse.cs" />
     <Compile Include="Models\AccountsResource.cs" />
     <Compile Include="Models\OrderBackupResource.cs" />
-    <Compile Include="Models\OrderResource.cs" />
-    <Compile Include="Models\OrdersResource.cs" />
     <Compile Include="Models\PickLocation.cs" />
     <Compile Include="Models\RemainingOrdersResource.cs" />
     <Compile Include="Models\TrueShipConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Web Services\TrueShipLocationSync.cs" />
-    <Compile Include="Web Services\TrueShipOrderHelperClass.cs" />
-    <Compile Include="Web Services\TrueShipOrderSync.cs" />
-    <Compile Include="Web Services\TruesShipBasicServices.cs" />
-    <Compile Include="Web Services\WebHelper.cs" />
+    <Compile Include="Web Services\WebRequestServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
