--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -62,8 +62,10 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Misc\ActionPolicies.cs" />
+    <Compile Include="Models\Box.cs" />
     <Compile Include="Models\BoxesResource.cs" />
     <Compile Include="Models\Charge.cs" />
+    <Compile Include="Models\Item.cs" />
     <Compile Include="Models\ItemsResource.cs" />
     <Compile Include="Models\Meta.cs" />
     <Compile Include="Models\OrdersResponse.cs" />
@@ -74,13 +76,12 @@
     <Compile Include="ITrueShipFactory.cs" />
     <Compile Include="ITrueShipService.cs" />
     <Compile Include="Misc\TrueShipLogger.cs" />
-    <Compile Include="Models\CompanyResponse.cs" />
-    <Compile Include="Models\AccountsResource.cs" />
-    <Compile Include="Models\OrderBackupResource.cs" />
+    <Compile Include="Models\CompanyResource.cs" />
     <Compile Include="Models\PickLocation.cs" />
     <Compile Include="Models\RemainingOrdersResource.cs" />
     <Compile Include="Models\TrueShipConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web Services\IWebRequestServices.cs" />
     <Compile Include="Web Services\WebRequestServices.cs" />
   </ItemGroup>
   <ItemGroup>
