--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\ItemsResource.cs" />
     <Compile Include="Models\Meta.cs" />
-    <Compile Include="Models\OrdersResponse.cs" />
+    <Compile Include="Models\OrdersResource.cs" />
     <Compile Include="Models\TrueShipCredentials.cs" />
     <Compile Include="TrueShipException.cs" />
     <Compile Include="TrueShipFactory.cs" />
@@ -81,8 +81,8 @@
     <Compile Include="Models\RemainingOrdersResource.cs" />
     <Compile Include="Models\TrueShipConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Web Services\IWebRequestServices.cs" />
-    <Compile Include="Web Services\WebRequestServices.cs" />
+    <Compile Include="WebServices\IWebRequestServices.cs" />
+    <Compile Include="WebServices\WebRequestServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
