--- a/src/TrueShipAccessTests/TrueShipAccessTests.csproj
+++ b/src/TrueShipAccessTests/TrueShipAccessTests.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{624757A7-EE43-4CBB-9C0E-2C1271DDD0C4}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TrueShipAccessTests</RootNamespace>
     <AssemblyName>TrueShipAccessTests</AssemblyName>
@@ -32,7 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TrueShipAccessTests.TrueShipTests</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentAssertions, Version=3.3.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
@@ -65,7 +66,6 @@
     <Compile Include="Companies\CompanyTests.cs" />
     <Compile Include="Orders\OrdersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ts_api_tests.cs" />
     <Compile Include="TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
