--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -62,13 +62,15 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Misc\ActionPolicies.cs" />
-    <Compile Include="Models\Box.cs" />
+    <Compile Include="Models\TrueShipBox.cs" />
     <Compile Include="Models\BoxesResource.cs" />
     <Compile Include="Models\Charge.cs" />
-    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Company.cs" />
+    <Compile Include="Models\TrueShipItem.cs" />
     <Compile Include="Models\ItemsResource.cs" />
     <Compile Include="Models\Meta.cs" />
-    <Compile Include="Models\OrdersResource.cs" />
+    <Compile Include="Models\OrderResource.cs" />
+    <Compile Include="Models\TrueShipBaseResponse.cs" />
     <Compile Include="Models\TrueShipCredentials.cs" />
     <Compile Include="TrueShipException.cs" />
     <Compile Include="TrueShipFactory.cs" />
