--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -61,19 +61,29 @@
     <Compile Include="..\Global\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Extensions\TrueShipListExtensions.cs" />
+    <Compile Include="IMethodLogging.cs" />
     <Compile Include="ITrueShipAuthService.cs" />
     <Compile Include="Misc\ActionPolicies.cs" />
+    <Compile Include="Models\AbstractTrueShipRequest.cs" />
     <Compile Include="Models\Charges.cs" />
+    <Compile Include="Models\Conventions\TrueShipApiEndpoint.cs" />
+    <Compile Include="Models\Conventions\TrueShipConventions.cs" />
+    <Compile Include="Models\ItemLocationUpdateModel.cs" />
     <Compile Include="Models\TrueShipBox.cs" />
     <Compile Include="Models\BoxesResource.cs" />
     <Compile Include="Models\ChargeUnit.cs" />
     <Compile Include="Models\Company.cs" />
+    <Compile Include="Models\Conventions\TrueShipField.cs" />
+    <Compile Include="Models\Conventions\TrueShipFilter.cs" />
+    <Compile Include="Models\TrueShipGetRequest.cs" />
     <Compile Include="Models\TrueShipItem.cs" />
     <Compile Include="Models\ItemsResource.cs" />
     <Compile Include="Models\Meta.cs" />
     <Compile Include="Models\OrderResource.cs" />
     <Compile Include="Models\TrueShipBaseResponse.cs" />
     <Compile Include="Models\TrueShipCredentials.cs" />
+    <Compile Include="Models\TrueShipPatchRequest.cs" />
     <Compile Include="TrueShipAuthService.cs" />
     <Compile Include="TrueShipException.cs" />
     <Compile Include="TrueShipFactory.cs" />
@@ -87,6 +97,7 @@
     <Compile Include="Models\TrueShipConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebServices\IWebRequestServices.cs" />
+    <Compile Include="WebServices\PaginationService.cs" />
     <Compile Include="WebServices\WebRequestServices.cs" />
   </ItemGroup>
   <ItemGroup>
