--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -40,7 +40,6 @@
       <HintPath>..\packages\Netco.1.5.1\lib\net45\Netco.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NuGet.Core, Version=1.6.30117.9648, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="ServiceStack.Text, Version=4.0.42.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ServiceStack.Text.4.0.42\lib\net40\ServiceStack.Text.dll</HintPath>
@@ -97,6 +96,7 @@
     <Compile Include="Models\TrueShipConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebServices\IWebRequestServices.cs" />
+    <Compile Include="WebServices\JsonCustomSerializationOptionsProvider.cs" />
     <Compile Include="WebServices\PaginationService.cs" />
     <Compile Include="WebServices\WebRequestServices.cs" />
   </ItemGroup>
