--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ dlldata.c
 *.pidb
 *.svclog
 *.scc
+.vs
 
 # Chutzpah Test files
 _Chutzpah*
@@ -189,3 +190,5 @@ _Pvt_Extensions/
 ModelManifest.xml
 src/TrueShipAccess.sln.DotSettings
 src/TrueShipAccessTests/Files/
+
+*Credentials*.csv
