--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -36,9 +36,8 @@
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Netco, Version=1.5.1.0, Culture=neutral, PublicKeyToken=9d732c15ac2ec2c9, processorArchitecture=MSIL">
-      <HintPath>..\packages\Netco.1.5.1\lib\net45\Netco.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Netco, Version=1.5.8.0, Culture=neutral, PublicKeyToken=9d732c15ac2ec2c9, processorArchitecture=MSIL">
+      <HintPath>..\packages\Netco.1.5.8\lib\net45\Netco.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack.Text, Version=4.0.42.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -61,16 +60,19 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Extensions\TrueShipListExtensions.cs" />
-    <Compile Include="IMethodLogging.cs" />
     <Compile Include="ITrueShipAuthService.cs" />
     <Compile Include="Misc\ActionPolicies.cs" />
     <Compile Include="Misc\ThrottlerAsync.cs" />
     <Compile Include="Models\AbstractTrueShipRequest.cs" />
-    <Compile Include="Models\Charges.cs" />
+    <Compile Include="Models\OrderBilling.cs" />
+    <Compile Include="Models\Money.cs" />
     <Compile Include="Models\Conventions\TrueShipApiEndpoint.cs" />
     <Compile Include="Models\Conventions\TrueShipConventions.cs" />
     <Compile Include="Models\Conventions\TrueShipFieldValues.cs" />
     <Compile Include="Models\ItemLocationUpdateModel.cs" />
+    <Compile Include="Models\OrderNote.cs" />
+    <Compile Include="Models\OrderShipping.cs" />
+    <Compile Include="Models\OrderShippingStatusEnum.cs" />
     <Compile Include="Models\TrueShipBox.cs" />
     <Compile Include="Models\BoxesResource.cs" />
     <Compile Include="Models\ChargeUnit.cs" />
@@ -80,7 +82,6 @@
     <Compile Include="Models\TrueShipGetRequest.cs" />
     <Compile Include="Models\TrueShipItem.cs" />
     <Compile Include="Models\ItemsResource.cs" />
-    <Compile Include="Models\Meta.cs" />
     <Compile Include="Models\OrderResource.cs" />
     <Compile Include="Models\TrueShipBaseResponse.cs" />
     <Compile Include="Models\TrueShipCredentials.cs" />
