--- a/src/TrueShipAccessTests/packages.config
+++ b/src/TrueShipAccessTests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-	<package id="FluentAssertions" version="3.3.0" targetFramework="net45" />
-	<package id="LinqToCsv" version="1.5.0.0" targetFramework="net45" />
-	<package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.3.0" targetFramework="net45" />
+  <package id="LinqToCsv" version="1.5.0.0" targetFramework="net45" />
+  <package id="Netco" version="1.5.8" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
