GUARD-506 Added shipping status based on api response; convert dates; reorganized mapper tests

--- a/src/TrueShipAccess/TrueShipAccess.csproj
+++ b/src/TrueShipAccess/TrueShipAccess.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Misc\ActionPolicies.cs" />
     <Compile Include="Misc\ThrottlerAsync.cs" />
     <Compile Include="Models\AbstractTrueShipRequest.cs" />
+    <Compile Include="Models\DateTimeExtensions.cs" />
     <Compile Include="Models\OrderBilling.cs" />
     <Compile Include="Models\Money.cs" />
     <Compile Include="Models\Conventions\TrueShipApiEndpoint.cs" />
