--- a/src/TrueShipAccessTests/TrueShipAccessTests.csproj
+++ b/src/TrueShipAccessTests/TrueShipAccessTests.csproj
@@ -69,8 +69,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MoneyMapperTests.cs" />
-    <Compile Include="OrderStatusMapperTests.cs" />
+    <Compile Include="MapperTests.cs" />
+    <Compile Include="Orders\OrderStatusMapperTests.cs" />
     <Compile Include="Orders\OrdersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
