--- a/src/TrueShipAccess/packages.config
+++ b/src/TrueShipAccess/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="7-Zip.CommandLine" version="18.1.0" targetFramework="net45" />
   <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net45" />
   <package id="Netco" version="1.5.8" targetFramework="net45" />
   <package id="ServiceStack.Text" version="4.0.42" targetFramework="net45" />
