--- a/src/TrueShipAccessTests/TrueShipAccessTests.csproj
+++ b/src/TrueShipAccessTests/TrueShipAccessTests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="MapperTests.cs" />
     <Compile Include="Orders\OrderStatusMapperTests.cs" />
     <Compile Include="Orders\OrdersTests.cs" />
+    <Compile Include="OrganizationsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
   </ItemGroup>
